fix(appcatalog): Commit source metadata last
Treat catalog-source.properties as the source store commit marker so sidecar-only partial writes do not register as configured catalogs or block retries after transient add failures.

Stage source metadata through a temporary file before moving it into place, skip uncommitted directories during listing, and cover retry after incomplete sidecar persistence.